<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp"
        android:baselineAligned="false">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:padding="3dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/argument"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textColor="@android:color/black"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/overview_not_specified"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:padding="3dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/genres"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textColor="@android:color/black"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/not_specified"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>