<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movies.list.MovieListFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/filterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="3dp"
        android:text="@string/filter_by"
        android:textColor="@android:color/black"
        android:layout_alignParentLeft="true" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filterGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filterTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        app:singleSelection="true"
        android:layout_alignParentRight="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/releaseDateFilter"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            app:rippleColor="@color/colorAccent"
            android:checked="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/ratingFilter"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating" />

        <com.google.android.material.chip.Chip
            android:id="@+id/nameFilter"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="7dp"
        android:layout_below="@+id/filterGroup"/>

    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <TextView
            android:id="@+id/progressValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:text="@string/searching_movies"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <include
        android:id="@+id/emptyState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/empty_movies_layout"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

</RelativeLayout>
