<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minHeight="47dp"
    android:minWidth="47dp"
    android:layout_margin="3dp"
    app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7dp">

            <RelativeLayout
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.85">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/topImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp"
                    android:scaleType="centerCrop"/>

                <RelativeLayout
                    android:id="@+id/popularityLayout"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:layout_margin="3dp"
                    android:layout_alignBottom="@+id/topImage"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/popularityAverage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/popularity_not_specified"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/popularityIndicator"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:indeterminate="false"
                        android:progressDrawable="@drawable/circular_progress_bar"
                        android:background="@drawable/circle_shape"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:max="100"
                        android:progress="0"/>

                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/language"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:layout_alignBottom="@+id/topImage"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:background="@color/ghost_grey"
                    android:text="@string/language_acronym_not_specified"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/detailsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="3dp"
                    android:text="@string/title_not_specified"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingStart="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="3dp"
                    android:paddingRight="3dp"
                    android:paddingBottom="5dp"
                    android:text="@string/overview_not_specified" />

                <LinearLayout
                    android:id="@+id/actionsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/releaseDate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/release_date_not_specified"
                        android:textColor="@android:color/black"
                        android:textStyle="italic" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/addToFavorites"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="3dp"
                        app:srcCompat="@drawable/heart_icon"
                        app:tint="@color/ghost_grey"
                        android:contentDescription="@string/google_flaticon_licence" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

</androidx.cardview.widget.CardView>